# telegram_wol_bot

./: .gitignore  bot.py  pyproject.toml  readme.md  requirements.txt  wakedown.py
cfg/: config.py  credskel.py
