[tool.poetry]
name = "telegram_wol_bot"
version = "0.1.0"
description = "telegram bot for WOL my server"
authors = ["xordone <xordone@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^3.8.1"
wakeonlan = "^2.0.1"
paramiko = "^2.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
